# telegram_chat_analyzer

./: .gitignore  README.md  chat_data_loader.py  main.py  main_example.py  pyproject.toml  report_generator.py  report_template.html  telegram_chat_analyzer.py
analyzers/: __init__.py  base_analyzer.py  chat_analyzer.py  text_message_analyzer.py
